General: Allow adding non-TUM users as research group employees
Merge Keycloak LDAP results with local DB user search so that
non-TUM users who exist in the User table can be found and added
as research group employees. Relax the universityId requirement
for local-only users and remove the keycloak mock user system
that was bypassing the real API on localhost.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>